# fast-random-ascii

./: Cargo.toml  README.md
benches/: ascii.rs
src/: main.rs
