[package]
name = "testing-tokio-uring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "ascii"
harness = false

[dependencies]
rand = "0.8.5"
rand_xorshift = "0.3.0"
tokio = { version = "1.28", features = ["rt", "macros", "sync", "fs", "io-std", "io-util"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
