[package]
name = "testing-tokio-uring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Anything below 2 SIGNIFICANTLY reduces performance
opt-level = 3
# Turning on makes performance shit the bed
lto = false
# MAY SLIGHTLY improve performance (probably placebo)
#strip = true

[[bench]]
name = "ascii"
harness = false

[dependencies]
crossbeam-channel = "0.5.8"
num_cpus = "1.15.0"
rand = "0.8.5"
rand_xorshift = "0.3.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
